--- a/index.css
+++ b/index.css
@@ -26,7 +26,9 @@
   
   a{
     text-decoration:none;
+    color: black;
   }
+
   
   .spacing-letter{
     letter-spacing:.5em; 
@@ -124,15 +126,15 @@ p{
     font-size:.6rem;
   }
   
-  main{
-    padding-top: 10em;
-  }
+ 
 
   header{
     position:fixed;
     width:100%;
-    padding:1rem 0;
+    padding:1em 0;
+    top:0%;
     z-index: 2;
+    
 
   }
   
@@ -347,6 +349,7 @@ p{
     
     border-radius:30px;
     transform:rotate(330deg);
+    
   }
   .main{
     display:flex;
@@ -895,6 +898,7 @@ border-radius: 10px;
   
    width: 6%;
  }
+
  .logo{
 
   flex-wrap: nowrap;
@@ -917,14 +921,21 @@ border-radius: 10px;
   background:white;
   width: 26%;
   transform: rotate(-5deg);
+  transition: animation 100s;
 }
 .cate-list{
+    position:relative;
   padding: .5em 0;
+  transition: background 2.9s cubic-bezier(0.68, 2, 0.02, 0.5);
+  border-radius: 20px;
+  padding:1em;
 }
 .cate-list:hover{
+    
   background: var(--light_orange);
   border-radius: 20px;
   padding:1em;
+  transform:rotate(45deg);
 }
 .footer-bar{
   display:block;
@@ -953,6 +964,8 @@ border-radius: 10px;
 .sigma{
   text-align: center;
 }
+
+
 main{
     padding-top: 5em;
   }
