--- a/index.css
+++ b/index.css
@@ -12,12 +12,14 @@
     --light_orange:#f27a61;
     --dark_orange:#ee6c53;
     --border-size:.2em;
-
+    --top-margin:7em;
   }
 
   
     main{
       padding-top: 7em;
+      background: white;
+      transform: translateY(35%);
     }
   
 
@@ -268,7 +270,7 @@ p{
   
   .right{
     position:relative;
-    
+    background: white;
     width:100%;
   }
   
@@ -290,7 +292,7 @@ p{
     background:white;
     padding:.7em 1.5em;
     border-radius:20px;
-    
+
   }
   
   .head{
@@ -426,7 +428,7 @@ p{
     padding:2em;
     
     border-radius:30px;
-    transform:rotate(330deg);
+    transform: scale(0);
     
   }
   .main{
@@ -448,6 +450,12 @@ p{
     width:15%;
   }
   
+  section{
+    position: fixed;
+    z-index: -1;
+    margin-top: 7em;
+  }
+
   .card1{
     position:relative;
     padding: 0 0 5em 0;
@@ -919,6 +927,12 @@ position:relative;
   }
   .less-right ,.small-right ,.right{
     display:none;
+  }
+  main{
+    transform: translateY(20%);
+  }
+  .simple-container{
+    padding-top:1em ;
   }
   .left{
     max-width: 100%;
