--- a/animations.css
+++ b/animations.css
@@ -101,9 +101,37 @@ header{
    opacity:1;
 }
 
-.addposition{
-    position:fixed;
+.clients_requ{
+    transform: translateY(0);
+   opacity:1;
 }
+
+.chilling_next{
+position: absolute;
+right:5%;
+top:6%;
+    
+    opacity:1;
+}
+.chilling_prev{
+    right:18%;
+    bottom:8%;
+    opacity:1;
+}
+
+.design_api{
+    right:39.5%;
+    opacity:1;
+}
+
+.telling_design{
+    box-shadow: 0px 0px 20px .1px grey;
+opacity:1;
+}
+
+
+
+
 
 @keyframes scaletop {
     to{
@@ -216,4 +244,8 @@ header{
         right:20%;
         opacity: 0%;
     }
+}
+
+.only-center{
+    opacity: 0;
 }
