--- a/index.css
+++ b/index.css
@@ -4,6 +4,10 @@
 *,*::before,*::after{
     box-sizing:border-box;
   }
+
+  html{
+    scroll-behavior: smooth;
+  }
   
   :root{
     --green:#0c8672;
@@ -19,12 +23,7 @@
 
 
 
-    main{
-      padding-top: 7em;
-      background: white;
-      transform: translateY(27.5%);
-    }
-  
+   
 
   .sans{
     font-family: 'Open Sans', sans-serif;
@@ -347,6 +346,10 @@ p{
     border-radius:20px;
 
   }
+
+  
+
+
   
   .head{
     display:flex;
@@ -504,8 +507,8 @@ p{
   }
   
   .toppers{
-    position: fixed;
-    z-index: -1;
+    
+    
     margin-top: 7em;
   }
   .middlers{
@@ -580,7 +583,7 @@ transition: all 2s ease-out;
 transform-origin: left;
 }
 
-.titling{
+.single_element{
   transform:translateY(100%);
   opacity:0;
   transition:all 2s ease; 
@@ -589,8 +592,16 @@ transform-origin: left;
 .dsc{
   transform:translateY(300%);
   opacity:0;
+  transition:all 3s ease;
+}
+.titling{
+  transform:translateY(300%);
+  opacity:0;
   transition:all 2s ease;
 }
+
+
+ 
 
   img.fitter{
     width:100%;
@@ -634,15 +645,22 @@ transform-origin: left;
    
   padding:2em 2em  1em 3em;
   border-radius: 15px;
-  box-shadow: 0px 0px 20px .1px grey;
+  
   background: white;
+  
+  transition: all 2s ease;
+  opacity:0;
   }
   .telling-left{
     
     width:35%;
     margin-top: 3em;
   }
-  
+  .inner-text{
+    transform: translateY(100%);
+    opacity:0;
+    transition:all 2s ease;
+  }
   
 
   .radiul-outer{
@@ -713,7 +731,10 @@ i.sizing{
   
   width:70%;
   border:.1px solid var(--grey);
-  
+ 
+  transform: scale(0);
+  transform-origin: left;
+  transition:all 4s ease;
 }
 .request-disc{
   padding-top: 3em;
@@ -723,9 +744,11 @@ i.sizing{
   position:absolute;
   background: #ec991b ;
   border-radius: 50%;
-  right:18%;
-  bottom:8%;
+  right:0%;
+  bottom:0%;
 z-index: -1;
+opacity:0;
+transition: all 2s ease-out;
 
 }
 
@@ -735,20 +758,23 @@ z-index: -1;
 height:40%;
  width:30%;
  border-radius: 300px 300px 0 0;
- right:5%;
- top:6%;
+  right:10%;
+  top:20%;
   background: #eeeef0;
   z-index: -1;
-  
+  opacity:0;
+  transition: all 1s ease-out;
+ 
 }
 .design{
   position:absolute;
   z-index: -1;
   width:10%;
  transform: rotate(-90deg);
- right:39.5%;
+ right:35%;
  top:29%;
-
+opacity:0;
+transition: all 1s ease-out;
 }
 
 .simpler-container{
@@ -1032,7 +1058,7 @@ position:relative;
   .telling-right{
     max-width:1000px;
     margin:0 ;
-    
+   
   }
  
   
