--- a/index.css
+++ b/index.css
@@ -85,10 +85,11 @@ ul{
   .colored1{
     position:absolute;
     height:100vh;
+    top:0%;
     left:0%;
     right:0%;
     background: var(--dark_orange);
-    z-index:3;
+    z-index:4;
   }
   .colored2{
     position:absolute;
@@ -96,7 +97,7 @@ ul{
     left:0%;
     right:0%;
     background: yellowgreen;
-    z-index:3;
+    z-index:4;
   }
   .colored3{
     position:absolute;
@@ -104,7 +105,7 @@ ul{
     left:0%;
     right:0%;
     background: blueviolet;
-    z-index:3;
+    z-index:4;
   }
   .colored4{
     position:absolute;
@@ -112,7 +113,7 @@ ul{
     left:0%;
     right:0%;
     background: indigo;
-    z-index:3;
+    z-index:4;
   }
   .colored5{
     position:absolute;
@@ -120,15 +121,16 @@ ul{
     left:0%;
     right:0%;
     background: var(--green);
-    z-index:3;
+    z-index:4;
   }
   .colored6{
     position:absolute;
     height:100vh;
     left:0%;
     right:0%;
+    top:0%;
     background: var(--grey);
-    z-index:3;
+    z-index:4;
   }
  
   a.grey{
